[gd_scene load_steps=10 format=3 uid="uid://c7lrpvtamic8o"]

[ext_resource type="Script" path="res://scenes/HUD/hud.gd" id="1_eq83v"]
[ext_resource type="Texture2D" uid="uid://dedvxp6268cb4" path="res://assets/hud/Icons/sleeping.png" id="2_348pe"]
[ext_resource type="Texture2D" uid="uid://cdxdha52ydwr8" path="res://assets/hud/Icons/litter-box.png" id="3_nd1ue"]
[ext_resource type="Texture2D" uid="uid://b5kd0av5n1lcy" path="res://assets/hud/Icons/pet.png" id="4_wdqb0"]
[ext_resource type="Texture2D" uid="uid://cfk65kk5he8wq" path="res://assets/hud/Icons/pet-bowl.png" id="5_6ka2i"]
[ext_resource type="Texture2D" uid="uid://3vlp6h0j7pk6" path="res://assets/hud/Icons/play.png" id="6_bidok"]

[sub_resource type="Theme" id="Theme_tjxlc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_whonh"]

[sub_resource type="Theme" id="Theme_c26ou"]

[node name="HUD" type="CanvasLayer"]
visible = false
script = ExtResource("1_eq83v")

[node name="BarContainer" type="MarginContainer" parent="."]
offset_right = 209.0
offset_bottom = 255.0
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VerticalList" type="VBoxContainer" parent="BarContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SleepBar" type="ProgressBar" parent="BarContainer/VerticalList"]
layout_mode = 2
theme = SubResource("Theme_tjxlc")
theme_override_styles/fill = SubResource("StyleBoxEmpty_whonh")
value = 100.0

[node name="Icon" type="TextureRect" parent="BarContainer/VerticalList/SleepBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("2_348pe")
expand_mode = 1

[node name="ToiletBar" type="ProgressBar" parent="BarContainer/VerticalList"]
layout_mode = 2
value = 100.0

[node name="Icon" type="TextureRect" parent="BarContainer/VerticalList/ToiletBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("3_nd1ue")
expand_mode = 1

[node name="LoveBar" type="ProgressBar" parent="BarContainer/VerticalList"]
layout_mode = 2
value = 100.0

[node name="Icon" type="TextureRect" parent="BarContainer/VerticalList/LoveBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("4_wdqb0")
expand_mode = 1

[node name="FoodBar" type="ProgressBar" parent="BarContainer/VerticalList"]
layout_mode = 2
theme = SubResource("Theme_c26ou")
value = 100.0

[node name="Icon" type="TextureRect" parent="BarContainer/VerticalList/FoodBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("5_6ka2i")
expand_mode = 1

[node name="PlayBar" type="ProgressBar" parent="BarContainer/VerticalList"]
layout_mode = 2
theme = SubResource("Theme_c26ou")
value = 100.0

[node name="Icon" type="TextureRect" parent="BarContainer/VerticalList/PlayBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("6_bidok")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_bottom = 71.0
grow_horizontal = 0
scale = Vector2(1, 0.993531)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Menu"

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.917647)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 256

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="TimeContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TimeContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="GridContainer" type="GridContainer" parent="TimeContainer/MarginContainer"]
layout_mode = 2

[node name="Day" type="Label" parent="TimeContainer/MarginContainer/GridContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Time" type="Label" parent="TimeContainer/MarginContainer/GridContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
